force-app/main/default/objects/Study_Grade_Item__c/Study_Grade_Item__c.object-meta.xml
<CustomObject>
    <description>Grade item for study unit</description>
    <label>Study Grade Item</label>
    <nameField>
        <label>Study Grade Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Study Grade Items</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>