force-app/main/default/objects/Study_Grade_Item__c/fields/Display_Type__c.field-meta.xml
<CustomField>
    <fullName>Display_Type__c</fullName>
    <label>Display Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grade_Display_Type</valueSetName>
    </valueSet>
</CustomField>