force-app/main/default/objects/Study_Grade_Item__c/fields/Parent_Grade_Item__c.field-meta.xml
<CustomField>
    <fullName>Parent_Grade_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Grade Item</label>
    <referenceTo>Study_Grade_Item__c</referenceTo>
    <relationshipLabel>Study Grade Items</relationshipLabel>
    <relationshipName>Child_Grade_Items</relationshipName>
    <type>Lookup</type>
</CustomField>