force-app/main/default/objects/Study_Grade_Item__c/fields/Study_Unit__c.field-meta.xml
<CustomField>
    <fullName>Study_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Study Unit</label>
    <referenceTo>Study_Unit__c</referenceTo>
    <relationshipLabel>Study Grade Items</relationshipLabel>
    <relationshipName>Study_Grade_Items</relationshipName>
    <type>Lookup</type>
</CustomField>