force-app/main/default/objects/Study_Grade_Item__c/validationRules/Required_DisplayType.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_DisplayType</fullName>
    <active>true</active>
    <description>To ensure the display type is populated.</description>
    <errorConditionFormula>ISBLANK(TEXT( Display_Type__c ))</errorConditionFormula>
    <errorDisplayField>Display_Type__c</errorDisplayField>
    <errorMessage>The display type is required.</errorMessage>
</ValidationRule>